--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "@babel/eslint-plugin": "^7.12.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.8",
     "bootstrap": "^4.5.3",
+    "eslint": "^7.11.0",
     "node-sass": "^4.14.1",
     "react": "16.13.1",
     "react-bootstrap": "^1.3.0",
@@ -18,12 +20,15 @@
     "react-scripts": "^3.4.3",
     "uuid": "8.1.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint-plugin-react": "^7.21.4"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint src/**/*.js"
   },
   "browserslist": {
     "production": [
