--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.8",
+    "axios": "^0.20.0",
     "bootstrap": "^4.5.3",
-    "eslint": "^7.11.0",
+    "eslint": "^6.6.0",
     "node-sass": "^4.14.1",
     "react": "16.13.1",
     "react-bootstrap": "^1.3.0",
