--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.8",
     "axios": "^0.20.0",
+    "base-64": "^1.0.0",
     "bootstrap": "^4.5.3",
     "eslint": "^6.6.0",
+    "jsonwebtoken": "^8.5.1",
     "node-sass": "^4.14.1",
     "react": "16.13.1",
     "react-bootstrap": "^1.3.0",
+    "react-cookies": "^0.1.1",
     "react-dom": "16.13.1",
+    "react-if": "^3.4.3",
     "react-jsonschema-form": "1.8.1",
     "react-router-dom": "5.2.0",
-    "react-scripts": "^3.4.3",
+    "react-scripts": "^3.4.4",
     "uuid": "8.1.0"
   },
   "devDependencies": {
